user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api
  labels:
    app: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: dumarkovohc.azurecr.io/api/user-java:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname"
            nodePublishSecretRef:
              name: secrets-store-creds           
---
apiVersion: v1
kind: Service
metadata: 
  name: user-java
  namespace: api  
spec: 
  type: ClusterIP
  ports: 
  - port: 80 
    targetPort: 80
  selector: 
    app: user-java
