tripviewer-ingress-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tripviewer-ingress-api
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /$4
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/user-java
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/user
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /userprofile
