tripviewer-ingress-web.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tripviewer-static
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /static/$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /.*
